それっぽく結果が表示される

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
     <head>
         <meta charset="utf-8">
-        <title>example</title>
-        <script src="app.js"></script>
+        <meta content="chrome=1,IE=edge" http-equiv="X-UA-Compatible">
+        <meta content="width=device-width,initial-scale=1.0,user-scalable=yes" name="viewport">
+        <title>Example</title>
+        <script type="text/javascript" src="app.js"></script>
     </head>
     <body>
+        <div>docs.lazysear.ch の UUID を利用し動作テストができます。</div>
+        <form data-lz>
+            <input type="hidden" name="uuid" value="0bbeb8df-9a99-4d8e-9f72-da9600488d0b">
+            <input type="hidden" name="format" value="json">
+            <input type="hidden" name="per_page" value="5">
+            <input type="hidden" name="match_count" value="3">
+            <input type="hidden" name="match_length" value="400">
+            <input type="text" name="keyword" autocomplete="off">
+            <button type="submit">Search</button>
+        </form>
+
+        <div style="margin-top: 5em">
+            <h3>検索テストキーワード</h3>
+            <ul>
+                <li>api</li>
+                <li>e2esound</li>
+                <li>います</li>
+                <li>お問い合わせ</li>
+                <li>ヒットしない</li>
+            </ul>
+        </div>
         <div id="root"></div>
     </body>
 </html>
